# local-app

./: build.sh  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
src/app/: globals.css  layout.js  page.js  setupProxy.js
src/app/entities/: ConvertionTask.js  FileData.js  FileFormat.js  fileformatsjson.js
src/app/screen/: FilesConvertionScreen.jsx
src/app/screen/components/: FileHandlerItem.js
src/app/ui/: AdvantageCards.jsx  AppBar.js  FileHandlerItem.js  FileUploader copy.js  FileUploader.js
src/app/ui/ConversionTaskItem/: TargetFormatDropdown.js  index.js
src/app/ui/ExtensionSettings/: BaseSetting.js  DefaultVideoSettings.js  ExtensionToSettingsModal.js  GifSettings.js
src/app/ui/worker/: CsvConvertor.js  tax_webassembly.d.ts  tax_webassembly.js  tax_webassembly_bg.wasm  tax_webassembly_bg.wasm.d.ts
src/app/utils/: ffmpegCommandBuilder.js  filesUtils.js  imageConvertor.js  image_convertor.js  mediaConvertor.js
src/app/utils/image_convertors/: Cargo.toml
src/app/utils/image_convertors/src/: lib.rs
src/app/utils/xml2json/: Cargo.toml
src/app/utils/xml2json/src/: lib.rs
