[package]
name = "xml2json"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
quickxml_to_serde = "0.6.0"
wasm-bindgen = "0.2"
wasm-bindgen-file-reader = "1.0.0"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Window", "File", "ReadableStream", "console","ImageData"] }
log = "0.4.6"
wasm-logger = "0.2.0"


[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib"]

